applications/forgejo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      containers:
      - image: codeberg.org/forgejo/forgejo:1.20.6-1
        name: forgejo
        ports:
        - containerPorts: 3000
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: forgejo-data
      volumes:
      - name: forgejo-data
        persistentVolumeClaim:
          claimName: forgejo-data
