applications/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
spec:
  type: ClusterIP
  selector:
    app: forgejo
  ports:
  - port: 80
    targetPort: 3000
