applications/forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-clusterissuer
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - forgejo.tbr.gg
    secretName: forge-tls
  rules:
  - host: forgejo.tbr.gg
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
